--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -11,6 +11,7 @@
     --margin: 1rem;
     --margin-large: 2.5rem;
 
+    --viewport-width-small: 400px;
 
     --colour-bg-base: rgb(255, 255, 255);
     --colour-bg-base-mid: rgb(238, 238, 238);
